syntax = "proto3";

package Protocol;

// 공통 요청 메시지 구조
message C2S_Metadata {
  string userId = 1;         // 유저 ID (UUID, 16바이트)
  string clientVersion = 2;  // 클라이언트 버전 (문자열)
}

// 최초 패킷 구조
message C2L_InitialPacket {
    C2S_Metadata meta = 1;
    uint32 playerId = 2;
    float latency = 3;
    string nickname = 4;
}